--- a/contracts/hub/Cargo.toml
+++ b/contracts/hub/Cargo.toml
@@ -45,3 +45,7 @@ cw721-shitty-kittyz = {path ="../cw721-shitty-kittyz", features = [
 thiserror = { version = "1.0.31" }
 cw20 = "0.15.0"
 cw20-base = {version = "0.15.0", features = ["library"]}
+nois = "0.5.1"
+serde_json = "1.0.89"
+serde-cw-value = "0.7.0"
+serde-json-wasm = "0.4.1"
